--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,8 +1,7 @@
 header {
-    background-color: #2286ae;
-    background-image: linear-gradient(315deg, #2234ae 0%, #191714 74%);
+    background-image: linear-gradient(325deg, #2253ae 74%, #191714 0%);
     color: white;
-    
+    margin-bottom: 20px;
 }
 
 form {
@@ -17,4 +16,3 @@ form {
 #recent-searches {
     margin-left: 5px;
 }
-
